# kaggle-competitions

./: .gitignore  .lintstagedrc.json  begin-competition.md  old-pyproject.toml  package-lock.json  package.json  pyproject.toml
.husky/: pre-commit
2023/Ongoing/Titanic Machine Learning from Disaster/: exploratory-analysis.ipynb  prediction.ipynb
2023/Ongoing/Titanic Machine Learning from Disaster/data/results/: catboost.csv  catboost_pi.csv  catboost_smote.csv  ordinal_encoder.csv  smotenc.csv
2023/Playground Series Season 3 Episode 12/data/results/: classifications.csv
2023/Playground Series/Season 3 Episode 12 Kidney Stone/: classification.ipynb  exploratory-analysis.ipynb
2023/Playground Series/Season 3 Episode 13 Vector Borne Disease/: classification.ipynb  exploratory-analysis.ipynb
2023/Playground Series/Season 3 Episode 22 Predict Health Outcomes of Horses/: column_names.py  exploratory-analysis.ipynb  prediction.ipynb  prediction.py
2023/Playground Series/Season 3/Episode 13 Vector Borne Disease/: utils.py
2023/Playground Series/Season 3/Episode 23 Software Defects Dataset/: column_names.py  cv_strategy.py  exploratory-analysis.ipynb  exploratory_analysis.py  grid_search.py  models.py  prediction.ipynb  prediction.py
2023/Playground Series/Season 3/Episode 24 Smoker Status using Bio-Signals/: column_names.py  exploratory-analysis.ipynb  grid_search.py  models.py  pipelines.py  prediction.ipynb  prediction.py
2023/Playground Series/Season 3/Episode 25 Mohs Hardness/: column_names.py  config.py  cv_strategy.py  exploratory-analysis.ipynb  grid_search.py  metric.py  models.py  pipelines.py  prediction.ipynb  prediction.py
2023/Playground Series/Season 3/Episode 26 Cirrhosis Outcomes/: begin-competition.md  column_names.py  config.py  exploratory-analysis.ipynb  metric.py  models.py  pipelines.py  prediction.ipynb  prediction.py
scripts/: clean_notebooks.py  helper.py
(+27 files in other folders)
